--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>Example of basic Maven project to integrate with SonarQube</name>
+     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>     
 
     <dependencies>
         <dependency>
@@ -26,6 +30,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>     
                 </plugin>
                 <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
