--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
      <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <sonar.login>admin</sonar.login>
+        <sonar.password>Saikumar@123</sonar.password> 
     </properties>     
 
     <dependencies>
